--- a/cv/src/app/commons/buttons/buttons.component.scss
+++ b/cv/src/app/commons/buttons/buttons.component.scss
@@ -1,5 +1,11 @@
 @import "./../../../assets/css/variables";
 
+.buttonCLass {
+  .mdc-button__label {
+    color: red !important;
+  }
+}
+
 .basicColor .mat-mdc-raised-button:not(:disabled) {
   background-color: $basic-color;
 }
