--- a/cv/src/app/commons/stars/stars.component.scss
+++ b/cv/src/app/commons/stars/stars.component.scss
@@ -18,9 +18,12 @@
     position: fixed;
     background-image: linear-gradient(
       162deg,
-      $dark-blue-color 0%,
-      $basic-color 35%,
-      $light-blue-color 100%
+      $dark-blue-color 20%,
+      $orange-color 40%,
+      $basic-color 64%,
+      $dark-blue-color 70%,
+      $basic-color 94%,
+      $dark-blue-color 100%
     );
 
     .star {
