--- a/cv/src/app/components/personal-data/personal-data.component.scss
+++ b/cv/src/app/components/personal-data/personal-data.component.scss
@@ -9,8 +9,10 @@
   line-height: 2;
 
   &-title {
+    color: $blue-color;
     font-size: calc($fontSizeM * 1.5);
     font-weight: bold;
+    letter-spacing: 3px;
   }
 
   &-description {
@@ -25,7 +27,7 @@
     align-items: center;
 
     &--link {
-      color: $black-color;
+      color: $blue-color;
       text-decoration: none;
       font-weight: bold;
     }
