--- a/cv/src/app/components/skills/skills.component.scss
+++ b/cv/src/app/components/skills/skills.component.scss
@@ -5,9 +5,11 @@
   flex-direction: column;
   align-items: center;
   margin-bottom: $gap-M;
+  color: $blue-color;
 
   &-name {
     font-weight: bold;
-    line-height: 1.5;
+    line-height: 2;
+    letter-spacing: 2px;
   }
 }
