--- a/cv/src/styles.scss
+++ b/cv/src/styles.scss
@@ -15,26 +15,9 @@ body {
 
 body {
   * {
-    font-family: $SansFamily;
+    font-family: $CommonFontFamily;
     font-size: $fontSizeS;
     margin: 0;
     padding: 0;
   }
-
-  @include mq-min-width(small) {
-    .staef {
-      background-repeat: no-repeat;
-      background-attachment: fixed;
-      background-image: linear-gradient(
-        162deg,
-        $dark-blue-color 0%,
-        $basic-color 35%,
-        $light-blue-color 100%
-      );
-    }
-  }
-}
-
-.mat-mdc-standard-chip .mdc-evolution-chip__graphic {
-  height: 0;
 }
