--- a/cv/src/app/components/personal-data/personal-data.component.scss
+++ b/cv/src/app/components/personal-data/personal-data.component.scss
@@ -33,7 +33,7 @@
     }
   }
 
-  @include mq-min-width(large) {
+  @include mixins.mq-min-width(medium) {
     &-description {
       padding-bottom: $gap-L;
       width: 100%;
