--- a/cv/src/app/commons/chips/chips.component.html
+++ b/cv/src/app/commons/chips/chips.component.html
@@ -1,9 +1,15 @@
-<mat-chip-listbox multiple="false" cdkDropList cdkDropListOrientation="horizontal">
-
+<mat-chip-listbox
+  multiple="false"
+  cdkDropList
+  cdkDropListOrientation="horizontal"
+>
   @for (option of options | async; track i; let i = $index) {
-  <mat-chip-option [selected]="option.selected" [disabled]="option.selected"
-    [style.backgroundColor]="option.selected ? option.color : ''" (click)="toggleSelection(i, option.color)">{{ "chips."
-    + option.name | translate }}
-  </mat-chip-option>
+    <mat-chip-option
+      [selected]="option.selected"
+      [disabled]="option.selected"
+      [style.backgroundColor]="option.selected ? option.color : ''"
+      (click)="toggleSelection(i, option.color)"
+      >{{ "chips." + option.name | translate }}
+    </mat-chip-option>
   }
 </mat-chip-listbox>
