--- a/cv/src/app/components/commons/chips/chips.component.html
+++ b/cv/src/app/components/commons/chips/chips.component.html
@@ -10,7 +10,7 @@
       [style.backgroundColor]="option.selected ? option.color : ''"
       (click)="toggleSelection(index, option.color)"
     >
-      {{ "chips." + option.name | translate }}
+      {{ "CHIPS." + option.name | translate }}
     </mat-chip-option>
   }
 </mat-chip-listbox>
