--- a/cv/src/app/components/commons/buttons/buttons.component.scss
+++ b/cv/src/app/components/commons/buttons/buttons.component.scss
@@ -1,4 +1,4 @@
-@import "./../../../assets/css/variables";
+@import "./../../../../assets/css/variables";
 
 .basicColor:not(:disabled) {
   background-color: $basic-color;
