--- a/cv/src/app/components/content/personal-data/personal-data.component.html
+++ b/cv/src/app/components/content/personal-data/personal-data.component.html
@@ -1,16 +1,24 @@
 <div class="content">
-  <h1 class="content-title">
-    {{ "personalData.profile" | translate | uppercase }}
+  <h1 class="content__title">
+    {{ "PERSONAL_DATA.PROFILE" | translate | uppercase }}
   </h1>
 
-  @if (info) {
-    <p class="content-description">{{ info.description }}</p>
-    <div class="content-contact" [@changeLanguage]="languageState">
-      @for (key of infoData; track $index) {
-        <a class="content-contact--link" (click)="onClickInfo(key)"
-          >{{ info[key] | phonePipe: key : hideNumber }}
-        </a>
-      }
+  @if (personalInfo) {
+    <p class="content__description">{{ personalInfo.description }}</p>
+
+    <div class="content__contact">
+      <a class="content__contact-link" (click)="showPhoneNumber()"
+        >{{ "PERSONAL_DATA.PHONE" | translate }}
+        <span class="content__contact-link--colored">
+          {{ personalInfo.phone | phonePipe: hideNumber }}
+        </span>
+      </a>
+      <a class="content__contact-link" (click)="openMail()"
+        >{{ personalInfo.email }}
+      </a>
+      <a class="content__contact-link" (click)="openLinkedIn()"
+        >{{ personalInfo.linkedIn }}
+      </a>
     </div>
   }
 </div>
