--- a/cv/src/app/components/content/section/section.component.html
+++ b/cv/src/app/components/content/section/section.component.html
@@ -1,27 +1,23 @@
 <div class="section">
+  <h1 class="section__heading">
+    {{ heading | translate | uppercase }}
+  </h1>
+
   @for (item of data; track $index) {
-    <div [ngClass]="{ centered: !item.subTitle }">
-      <h3 class="section-title">{{ item.title }}</h3>
+    <div class="section__title section__title--bold">{{ item.title }}</div>
+    <div class="section__title">{{ item.subTitle }}</div>
+    <div class="section__title section__title--bold mb-2">
+      {{ item.period }}
     </div>
 
-    @if (item.subTitle) {
-      <h4 class="section-subTitle">{{ item.subTitle }}</h4>
-    }
-    
-    @if (item.period) {
-      <h4 class="section-subTitle">{{ item.period }}</h4>
-    }
-
     @if (item?.description?.length) {
-      <ul class="section-description">
+      <ul class="section__list">
         @for (task of item?.description; track $index) {
-          <li>{{ task }}</li>
-        } @empty {
-          <b>{{ "noData" | translate }}</b>
+          <li [innerHTML]="task"></li>
         }
       </ul>
     }
   } @empty {
-    <b>{{ "noData" | translate }}</b>
+    <b>{{ "NO_DATA" | translate }}</b>
   }
 </div>
