--- a/cv/src/app/components/content/user/user.component.html
+++ b/cv/src/app/components/content/user/user.component.html
@@ -1,15 +1,15 @@
 @if (info) {
   <div class="user">
     <img
-      class="user-image"
+      class="user__image"
       [src]="info.avatar"
       [@rubberBand]="rubberBand"
       alt="avatar"
     />
-    <div class="user-name">
-      <h1 class="user-name--firstName">{{ info.firstName }}</h1>
-      <h1 class="user-name--lastName">{{ info.lastName }}</h1>
-      <h6 class="user-name--position">{{ info.position | uppercase }}</h6>
+    <div class="user__name">
+      <h1 class="user__name-firstName">{{ info.firstName }}</h1>
+      <h1 class="user__name-lastName">{{ info.lastName }}</h1>
+      <h6 class="user__name-position">{{ info.position | uppercase }}</h6>
     </div>
   </div>
 }
