--- a/cv/src/app/components/content/user/user.component.scss
+++ b/cv/src/app/components/content/user/user.component.scss
@@ -6,34 +6,35 @@
   flex-direction: column;
   align-items: center;
 
-  &-image {
+  &__image {
     width: 200px;
     height: 200px;
-    border: 6px solid $lilac-color;
+    background-color: $lilac-color;
+    border: 5px solid $lilac-color;
     border-radius: 50%;
   }
 
-  &-name {
+  &__name {
     display: flex;
     flex-direction: column;
     text-align: center;
 
-    &--firstName,
-    &--lastName {
+    &-firstName,
+    &-lastName {
       font-family: $Caveat;
-      font-size: $fontSizeL;
+      font-size: 90px;
       color: $basic-color;
     }
 
-    &--lastName {
-      padding-left: calc(2rem * 1.5);
+    &-lastName {
+      padding-left: calc(32px * 1.5);
+      line-height: 60px;
     }
 
-    &--position {
-      font-size: calc($fontSizeM * 1.5);
-      padding-left: calc(2rem * 3);
+    &-position {
+      font-size: 20px;
+      padding-left: calc(32px * 3);
       font-weight: bold;
-      color: $blue-color;
       letter-spacing: 3px;
     }
   }
@@ -43,26 +44,17 @@
     flex-direction: row;
     justify-content: center;
 
-    &-image {
+    &__image {
       width: 250px;
       height: 250px;
     }
 
-    &-name {
+    &__name {
       text-align: left;
-      
-      &--firstName,
-      &--lastName {
+
+      &-firstName,
+      &-lastName {
         padding-bottom: 1rem;
-      }
-    }
-  }
-  
-  @include mixins.mq-min-width(medium) {
-    &-name {
-      &--firstName,
-      &--lastName {
-        padding-bottom: 2rem;
       }
     }
   }
