--- a/cv/src/app/components/content/section/section.component.scss
+++ b/cv/src/app/components/content/section/section.component.scss
@@ -3,7 +3,7 @@
 
 .section {
   &__heading {
-    background-color: $blue-color;
+    background-color: $text-color;
     color: $orange-color;
     min-width: 30%;
     padding: 10px 0;
