--- a/cv/src/styles.scss
+++ b/cv/src/styles.scss
@@ -14,7 +14,7 @@ body {
 }
 
 body {
-  background-color: $basic-color;
+  background-color: #eeeeee;
   
   * {
     font-family: $CommonFontFamily;
