--- a/cv/src/app/components/base-layout/base-layout.component.scss
+++ b/cv/src/app/components/base-layout/base-layout.component.scss
@@ -1,22 +1,14 @@
 @use "./../../../assets/css/mixins";
 @import "./../../../assets/css/variables";
 
-.bg{
-  width: 100vw;
-  height: auto;
-  position: fixed;
-  top: 0;
-  left: 0;
-  opacity: 0.8;
-}
-
 .main {
   margin-top: 5rem;
   background-color: $white-color;
   min-width: 330px;
   padding: 1rem;
   position: relative;
-  color: $blue-color;
+  color: $text-color;
+  box-shadow: 0px 0px 10px $shadow-color;
 
   &__buttons > * {
     display: flex;
