Editable-form In progrees

--- a/cv/src/app/components/base-layout/base-layout.component.html
+++ b/cv/src/app/components/base-layout/base-layout.component.html
@@ -9,7 +9,7 @@
 
     <div class="main__content" [@changeLanguage]="languageState"> 
       <div class="main__content-left-side">
-        <app-personal-data [personalInfo]="personalInfo.info" />
+        <app-personal-data [form]="form.get('info')" />
         <app-section
           heading="SECTIONS.SPECIALIZATION"
           [data]="personalInfo.specializations"
