--- a/cv/src/app/components/base-layout/base-layout.component.scss
+++ b/cv/src/app/components/base-layout/base-layout.component.scss
@@ -1,77 +1,121 @@
 @use "./../../../assets/css/mixins";
 @import "./../../../assets/css/variables";
 
-.main {
-  margin-top: 5rem;
-  background-color: $white-color;
-  min-width: 330px;
-  padding: 1rem;
-  position: relative;
-  color: $text-color;
-  box-shadow: 0px 0px 10px $shadow-color;
+.topbar {
+  background-color: rgb(50, 54, 57);
+  min-width: max-content;
+  padding: 9px;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 1000;
 
-  &__buttons > * {
+  display: flex;
+  justify-content: space-between;
+
+  & > * {
     display: flex;
-    justify-content: flex-end;
-    margin-bottom: 4px;
+    min-width: max-content;
+    flex-wrap: nowrap;
+  }
+}
+
+.main {
+  min-width: 350px;
+  padding: 16px 0;
+  background-color: $white-color;
+  color: $text-color;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  &__background {
+    width: 100%;
+    height: 300px;
+    background-color: $light-beige-color;
+    position: absolute;
+    top: 0;
+    z-index: 0;
   }
 
   &__content {
-    padding: 1rem;
+    position: relative;
+    z-index: 1;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto auto auto;
+
+    &--user {
+      padding: 32px 16px;
+      grid-row: 1;
+    }
+
+    &-left-side {
+      grid-row: 2;
+      background-color: $basic-color;
+      color: $white-color;
+    }
+
+    &-right-side {
+      grid-row: 3;
+    }
   }
 
   &__footer {
     font-size: 10px;
     text-align: justify;
-    color: darkgray;
+    color: $light-gray-color;
     line-height: 1.5;
     padding: 1rem;
   }
 
   @include mixins.mq-min-width(extra-small) {
-    width: 85vw;
-    margin: 2rem auto;
-    padding: 2rem;
-    border-radius: 16px;
+    width: 768px;
+    margin: 0 auto;
+    padding: 0;
+    box-shadow: 0px 0px 3px $black-color;
+
+    &__background {
+      width: 95%;
+    }
 
     &__content {
-      display: flex;
-      flex-direction: row;
-      justify-content: center;
-      margin: 16px;
-      padding: 0 16px;
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      grid-template-rows: max-content 1fr;
+      grid-column-gap: 32px;
+      margin: 0 32px;
+
+      &--user {
+        padding: 100px 0;
+        grid-area: 1 / 2 / 2 / 3;
+      }
 
       &-left-side {
-        width: 45%;
-      }
-      &-right-side {
-        width: 55%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        background-color: $basic-color;
+        color: $white-color;
+        padding: 32px;
+        grid-area: 1 / 1 / 3 / 2;
       }
 
-      &-left-side,
       &-right-side {
-        padding: 16px;
+        grid-area: 2 / 2 / 3 / 3;
       }
     }
   }
 
   @include mixins.mq-min-width(small) {
-    width: 75vw;
-  }
-
-  @include mixins.mq-min-width(medium) {
-    width: 60vw;
-  }
-
-  @include mixins.mq-min-width(large) {
-    width: 50vw;
+    width: 900px;
 
     &__content {
-      margin: 2rem;
-      padding: 0 2rem;
-      &-left-side {
-        width: 40%;
-      }
+      display: grid;
+      grid-template-columns: 360px auto;
+      grid-template-rows: max-content 1fr;
+      grid-column-gap: 32px;
+      margin: 0 50px;
     }
   }
 }
