--- a/cv/src/app/components/content/personal-data/personal-data.component.scss
+++ b/cv/src/app/components/content/personal-data/personal-data.component.scss
@@ -2,49 +2,44 @@
 @import "../../../../assets/css/variables";
 
 .content {
+  color: $white-color;
+  background-color: $basic-color;
+  font-family: $MontserratLight;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  padding-bottom: 1rem;
-  line-height: 2;
+  padding: 32px 16px;
 
   &__title {
-    font-size: 20px;
-    font-weight: bold;
-    letter-spacing: 3px;
+    font-family: $MontserratSemiBold;
+    font-size: 32px;
   }
 
-  &__description {
-    text-align: center;
-    width: 80%;
-    font-size: 12px;
-    white-space: pre-line;
+  hr {
+    border-top: 2px solid $white-color;
+    margin-bottom: 16px;
+    opacity: 1;
   }
 
   &__contact {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    margin-top: 32px;
 
-    &-link {
-      text-decoration: none;
-      font-weight: bold;
-      color: inherit;
-      font-size: 14px;
-      cursor: pointer;
+    &-item {
+      display: flex;
+      font-size: 12px;
+      gap: 5px;
 
-      &--colored {
-        color: $basic-color;
-        font-size: 14px;
+      &--bold {
+        text-decoration: none;
+        font-family: $MontserratSemiBold;
+        color: inherit;
+        cursor: pointer;
       }
     }
   }
 
   @include mixins.mq-min-width(extra-small) {
-    &__contact,
-    &__description {
-      padding-bottom: 2rem;
-      width: 100%;
-    }
+    padding: 0 0 16px;
   }
 }
