--- a/cv/src/styles.scss
+++ b/cv/src/styles.scss
@@ -6,19 +6,16 @@
 html,
 body {
   margin: 0;
+  margin-top: 29px;
   padding: 0;
   width: 100%;
   height: 100%;
-  position: relative;
-  overflow: scroll;
 }
 
 body {
-  background-color: #eeeeee;
-  
+  background-color: $pdf-color;
+
   * {
-    font-family: $CommonFontFamily;
-    font-size: 12px;
     margin: 0;
     padding: 0;
   }
