--- a/cv/src/app/components/base-layout/base-layout.component.scss
+++ b/cv/src/app/components/base-layout/base-layout.component.scss
@@ -4,7 +4,7 @@
 .topbar {
   background-color: rgb(50, 54, 57);
   min-width: max-content;
-  padding: 9px;
+  padding: 9px 9px 5px;
   position: fixed;
   top: 0;
   width: 100%;
@@ -70,7 +70,7 @@
   }
 
   @include mixins.mq-min-width(extra-small) {
-    width: 768px;
+    width: 794px;
     margin: 0 auto;
     padding: 0;
     box-shadow: 0px 0px 3px $black-color;
@@ -81,7 +81,7 @@
 
     &__content {
       display: grid;
-      grid-template-columns: 1fr 1fr;
+      grid-template-columns: 300px 1fr;
       grid-template-rows: max-content 1fr;
       grid-column-gap: 32px;
       margin: 0 32px;
@@ -98,6 +98,7 @@
         background-color: $basic-color;
         color: $white-color;
         padding: 32px;
+        margin-top: 32px;
         grid-area: 1 / 1 / 3 / 2;
       }
 
@@ -108,13 +109,7 @@
   }
 
   @include mixins.mq-min-width(small) {
-    width: 900px;
-
     &__content {
-      display: grid;
-      grid-template-columns: 360px auto;
-      grid-template-rows: max-content 1fr;
-      grid-column-gap: 32px;
       margin: 0 50px;
     }
   }
