--- a/cv/src/app/components/base-layout/base-layout.component.scss
+++ b/cv/src/app/components/base-layout/base-layout.component.scss
@@ -66,7 +66,7 @@
     text-align: justify;
     color: $light-gray-color;
     line-height: 1.5;
-    padding: 1rem;
+    padding: 16px 50px;
   }
 
   @include mixins.mq-min-width(extra-small) {
