--- a/cv/src/app/components/content/personal-data/personal-data.component.scss
+++ b/cv/src/app/components/content/personal-data/personal-data.component.scss
@@ -30,6 +30,11 @@
       font-size: 12px;
       gap: 5px;
 
+      a {
+        text-decoration: none;
+        color: $white-color;
+      }
+
       &--bold {
         text-decoration: none;
         font-family: $MontserratSemiBold;
