--- a/cv/src/app/components/base-layout/base-layout.component.scss
+++ b/cv/src/app/components/base-layout/base-layout.component.scss
@@ -94,10 +94,9 @@
       &-left-side {
         display: flex;
         flex-direction: column;
-        justify-content: center;
         background-color: $basic-color;
         color: $white-color;
-        padding: 32px;
+        padding: 220px 32px 0;
         margin-top: 32px;
         grid-area: 1 / 1 / 3 / 2;
       }
