--- a/cv/src/app/components/content/personal-data/personal-data.component.html
+++ b/cv/src/app/components/content/personal-data/personal-data.component.html
@@ -8,16 +8,18 @@
     <span class="content__description">{{ personalInfo.description }}</span>
 
     <div class="content__contact">
-      @for (link of contactList; track $index) {
+      @for (item of contactList; track $index) {
         <div class="content__contact-item">
-          @if (link.label) {
-            <span>{{ link.label }}</span>
+          @if (item.value) {
+            @if (item.label) {
+              <span>{{ item.label }}</span>
+            }
+            <a (click)="item?.onAction()">
+              <span class="content__contact-item--bold">
+                {{ item.value }}
+              </span>
+            </a>
           }
-          <a (click)="link?.onAction()">
-            <span class="content__contact-item--bold">
-              {{ link.value | linkPipe | phonePipe: hideNumber }}
-            </span>
-          </a>
         </div>
       }
     </div>
